# cppVoxelGame

./: .gitattributes  .gitignore  CMakeLists.txt  vcpkg.json
resourcepacks/default/: RESOURCES.json
src/: main.cpp
src/app/: app.cpp  app.h  window.cpp  window.h
src/gl/: gl.cpp  gl.h
src/hi/: hi.cpp  hi.h
